<resources>
    <string name="app_name">BittrexAnalizer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_coin">Adicionar Moeda</string>
    <string name="notification">Notificação</string>
    <string name="calcular">Calcular</string>
    <string name="email">paulinho.legionario07@gmail.com</string>
    <string name="nome_moeda">Moeda</string>
    <string name="sigla">Sigla</string>
    <string name="last">Last</string>
    <string name="bid">Bid</string>
    <string name="ask">Ask</string>
    <string name="calcular_roi">Calcular ROI</string>
    <string name="total_em_btc_adquirido">Total em BTC</string>
    <string name="valor_em_btc_para_compra">Valor aplicado em BTC</string>
    <string name="deletar">Deletar</string>
    <string name="adicionar_moeda">Adicionar Moeda</string>
    <string name="nome_completo_moeda">Nome da Moeda</string>
    <string name="sigla_moeda">Sigla da Moeda</string>
    <string name="adicionar">Adicionar</string>
    <string name="deletar_moeda">Deletar Moeda</string>
    <string name="action_help">Ajuda</string>
    <string name="criar_notificacao">Criar Notificação</string>
    <string name="desligar_todas_as_notificacoes">Desligar Notificações</string>
    <string name="desligar">Desligar</string>
    <string name="desligar_notificacoes">Desligar Notificações</string>
    <string name="aviso_de_taxa">Avisos de Taxas</string>
    <string name="buy">Compra</string>
    <string name="sell">Venda</string>
    <string name="abaixo">Abaixo:</string>
    <string name="acima">Acima:</string>
    <string name="configuracoes">Configuração</string>
    <string name="propriedade">Propriedade</string>
    <string name="valor">Valor</string>
    <string name="digite_propriedade_configuracao">Digite a Propriedade</string>
    <string name="digite_o_valor_configuracao">Digite o Valor</string>
    <string name="keys">Keys</string>
    <string name="Key">KEY</string>
    <string name="secret">SECRET</string>
    <string name="digite_a_key">Digite a KEY</string>
    <string name="digite_a_secret">Digite a Secret</string>
    <string name="balances">Balances</string>
    <string name="balance">Balance</string>
    <string name="available">Available</string>
    <string name="pending">Pending</string>
    <string name="crypto_address">CryptoAddress</string>
    <string name="orderuuid">OrderUuid</string>
    <string name="exchange">Exchange</string>
    <string name="ordertype">OrderType</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_reimaning">QuantityReimaining</string>
    <string name="opened">Opened</string>
    <string name="open_orders">Open Orders</string>
    <string name="isopen">IsOpen</string>
    <string name="limit">Limit</string>
    <string name="reserved">Reserved</string>
    <string name="reserve_remaining">ReserveRemaining</string>
    <string name="comission_paid">ComissionPaid</string>
    <string name="comission_reserved">ComissionReserved</string>
    <string name="comission_reserved_remaining">ComissionRes.Remaining</string>
    <string name="price">Price</string>
    <string name="price_per_unit">PricePerUnit</string>
    <string name="closed">Closed</string>
    <string name="order">Order</string>
    <string name="orders">Orders</string>
    <string name="comission">Comission</string>
    <string name="time_stamp">TimeStamp</string>
    <string name="is_conditional">IsConditional</string>
    <string name="immediate_or_cancel">ImmediateOrCancel</string>
    <string name="condition_target">ConditionTarget</string>
    <string name="condition">Condition</string>
    <string name="valor_aplicado">Valor Aplicado</string>
    <string name="action_calcular_porcentagem">Calcular Porcentagem</string>
    <string name="criar_limit">Criar LIMIT</string>
    <string name="criar_stop">Criar STOP</string>
    <string name="comprar">Comprar</string>
    <string name="vender">Vender</string>
    <string name="quantidade_em_btc">Qtde em BTC</string>
    <string name="detalhar">Detalhar</string>
    <string name="ligar_robot">Ligar Robot Compra</string>
    <string name="desligar_robot">Desligar Robot Compra</string>
    <string name="ligar_robot_venda">Ligar Robot Venda</string>
    <string name="desligar_robot_venda">Desligar Robot Venda</string>
    <string name="valor_de_compra">Valor De Compra</string>
</resources>
