<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/deletar_moeda"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inpSiglaMoeda"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/sigla_moeda"
            android:enabled="false"
            android:gravity="center"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/inpNomeMoeda"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/nome_moeda"
            android:gravity="center"
            android:enabled="false"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txtDeletar"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="#f2f2f2"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_remove_black_24dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/deletar"/>

    </LinearLayout>


</LinearLayout>