<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:gravity="center"
        android:text="@string/order"
        android:textAlignment="center"
        android:textColor="@color/titulos"
        android:textSize="28sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.8"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/exchange"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/time_stamp"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/ordertype"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/orderuuid"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/quantity"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/quantity_reimaning"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/limit"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/comission"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/price"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/price_per_unit"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/is_conditional"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/condition"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/condition_target"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:text="@string/immediate_or_cancel"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtExchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtTimeStamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/txtOrderType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtOrderUuid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtQuantityRemaining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtLimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtComission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/txtPricePerUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/txtIsConditional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtConditionTarget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtImmediateOrCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorItemListView"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>